<resources>
    <string name="app_name">Tiklikes</string>
    <string name="a">t</string>
    <string name="closes">t</string>
    <string name="ap">ti</string>
    <string name="app">tik</string>
    <string name="app_">tikf</string>
    <string name="app_n">tikfo</string>
    <string name="app_na">tikfol</string>
    <string name="app_nam">tikfoll</string>
    <string name="app_names">tikfollo</string>
    <string name="app_namesz">tikfollow</string>
    <string name="app_namesx">tikfollows</string>
    <string name="text">\@username</string>
    <string name="points">00000</string>
    <string name="textview">Fetching Jokes for you</string>
    <string name="splash">Claim likes and followers</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="hint">hint</string>
    <string name="enter_your_tiktok_username">Enter your Tiktok Username</string>
    <string name="type_here">Type here</string>
    <string name="done">Done</string>
    <string name="_25_likes">+ 25 likes</string>
    <string name="claim">Claim</string>
    <string name="_20_likes">+ 20 likes</string>
    <string name="_15_likes">+15 likes</string>
    <string name="_1_follow">+1 Follow</string>
    <string name="_10_likes">+10 likes</string>
    <string name="_5_likes">+ 5 likes</string>
    <string name="claim_them_for_free">Claim them for free</string>
    <string name="claim_daily_bonus">Claim Daily Bonus</string>
    <string name="get_back_to_task">Get back to Task</string>
    <string name="g">.</string>
    <string name="jokes">Jokes</string>
    <string name="prove">Prove</string>
    <string name="rate">Rate</string>
    <string name="jokesbhj">Jokes</string>
</resources>